<resources>
    <string name="app_name">Job hunt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile_details">Profile details</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_to_the_job_hunting_application_n_feel_free_to_have_a_look_around_to_interact_with_other_people_and_companies_you_ll_have_to_sign_up_which_is_free">Welcome to the job hunting application! \n Feel free to have a look around. To interact with other people and companies, you\'ll have to sign up, which is free!</string>
    <string name="profile">Profile</string>
    <string name="media">Media</string>
    <string name="job_offers">Job offers</string>
    <string name="interviews">Interviews</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register an account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="company">Company</string>
    <string name="candidate">Candidate</string>
    <string name="user_type">User type:</string>
    <string name="err_msg_enter_first_name">Enter first name</string>
    <string name="err_msg_enter_last_name">Enter last name</string>
    <string name="err_msg_enter_email">Enter email</string>
    <string name="err_msg_enter_password">Enter password</string>
    <string name="err_msg_confirm_password">Confirm password</string>
    <string name="err_msg_passwords_no_match">Passwords don\'t match</string>
    <string name="err_msg_enter_company_name">Enter a company name</string>
    <string name="company_name">Company name</string>
    <string name="connect">Connect</string>
    <string name="profile_picture">profilePicture</string>
    <string name="name">Name :</string>
    <string name="city">City :</string>
    <string name="email">Email :</string>
    <string name="age">Age :</string>
    <string name="chat">Chat</string>
    <string name="add_photo">Add photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="action_save_changes">Save changes</string>
    <string name="prompt_city">City</string>
</resources>