<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grp_logged_in_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_connect"
            android:title="@string/connect" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_job_offers"
            android:icon="@drawable/ic_job_offers"
            android:title="@string/job_offers" />
        <item
            android:id="@+id/nav_interviews"
            android:icon="@drawable/ic_interviews"
            android:title="@string/interviews" />
        <item
            android:id="@+id/nav_media"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/media" />
    </group>
</menu>