<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_connect"
        android:name="com.example.myapplication.ui.connect.ConnectFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_connect" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.myapplication.ui.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_connect" />
        <action
            android:id="@+id/action_nav_login_to_nav_register"
            app:destination="@id/nav_register" />
    </fragment>

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.myapplication.ui.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register"/>
</navigation>