<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.MyProfileFragment">

    <ImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:scaleType="fitXY"
        android:contentDescription="@string/profile_picture"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars[0]" />

    <TextView
        android:id="@+id/placeholder_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:text="@string/name"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_picture" />

    <TextView
        android:id="@+id/placeholder_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/age"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="@+id/placeholder_name"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_name" />

    <TextView
        android:id="@+id/placeholder_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/email"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="@+id/placeholder_age"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_age" />

    <TextView
        android:id="@+id/placeholder_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/city"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="@+id/placeholder_email"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_email" />

    <TextView
        android:id="@+id/tv_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_24sdp"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="@+id/placeholder_name"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="TEST" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="@+id/placeholder_age"
        app:layout_constraintEnd_toEndOf="@+id/tv_display_name"
        tools:text="TEST" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="@+id/placeholder_email"
        app:layout_constraintEnd_toEndOf="@+id/tv_city"
        tools:text="TEST" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="@+id/placeholder_city"
        app:layout_constraintEnd_toEndOf="@+id/tv_display_name"
        tools:text="TEST" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_edit"
        android:contentDescription="@string/edit"/>



</androidx.constraintlayout.widget.ConstraintLayout>